2005-10-25  Stefan Seefeld  <stefan@codesourcery.com>

	* qm/test/result.py: Add refactored CheckExitStatus method.
	* qm/test/classes/command.py: Use it.
	* qm/test/classes/compiler_test.py: Prepare CompilerTest for reuse;
	general cleanup.
	* qm/test/classes/compilation_test.py: Add new SimpleCompilationTest
	and SimpleCompiledResource extensions.
	* qm/test/classes/classes.qmc: Register them.

2005-10-25  Mark Mitchell  <mark@codesourcery.com>

	* qm/test/classes/dejagnu_stream.py (sets.Set): Don't import it.
	(DejaGNUReader.__init__): Don't set test_ids.

2005-10-25  Stefan Seefeld  <stefan@codesourcery.com>

	* share/xml/report.xslt: Fix handling of multiple test runs.

2005-10-24  Mark Mitchell  <mark@codesourcery.com>

	* qm/test/classes/dejagnu_stream.py
	(DejaGNUStream.__UpdateResult): Fix typo.

	* qm/test/classes/dejagnu_stream.py (cgi): Import it.
	(re): Likewise.
	(sets.Set): Likewise.
	(DejaGNUReader): Add combined mode.  Add expectations-generation
	mode.

2005-10-23  Mark Mitchell  <mark@codesourcery.com>

	* qm/test/base.py (load_outcomes): Adjust documentation.
	(load_results): Permit file parameter to be an extension
	descriptor.
	* qm/test/cmdline.py (QMTest.commands_spec): Add --output
	option to "qmtest summarize".
	(QMTest.__ExecuteSummarize): Use self.results_file_name.  Adjust
	call to load_results.  Pass result of --output option to
	__GetResultStreams.
	(QMTest.__ExecuteRun): Use self.results_file_name.  Pass results
	file name to __GetResultStreams.
	(QMTest.__GetExpectedOutcomes): Adjust call to load_outcomes.
	(QMTest.__FilterTestsToRun): Likewise.
	(QMTest.__GetResultStreams): Add output_file parameter.  Create a
	file result stream appropriate.
	* qm/test/report.py (ReportGenerator._CreateResultStreams): Adjust
	call to load_results.
	* qm/test/classes/dir_run_database.py (DirRunDatabase.__init__):
	Likewise.
	* qm/test/doc/manual.xml: Use DocBook 4.2.  Provide a URL for the
	DocBook DTD.